item to center and margin bottom to section is add

--- a/contact.html
+++ b/contact.html
@@ -13,47 +13,49 @@
     </style>
 </head>
 <body>
-        <!--contact section start-->
-        <section id="contact-us">
-            <div class="contact-information align-items-center">
-                <h2>Contact Information</h2>
-                <div class="contact-information-content">
-                    <span class="icons"><i class="bi bi-telephone-fill"></i></span>
-                    <p>9911002387</p>
+    <div class="main">
+            <!--contact section start-->
+            <section id="contact-us" class="mb-3">
+                <div class="contact-information align-items-center">
+                    <h2>Contact Information</h2>
+                    <div class="contact-information-content">
+                        <span class="icons"><i class="bi bi-telephone-fill"></i></span>
+                        <p>9911002387</p>
+                    </div>
+                    <div class="contact-information-content">
+                        <span class="icons"><i class="bi bi-envelope-fill"></i></span>
+                        <p>upendar2002@gmail.com</p>
+                    </div>
+                    <div class="contact-information-content">
+                        <span class="icons"><i class="bi bi-geo-alt-fill"></i></span>
+                        <p>House No. 007, KJ, RajNagar, GZB</p>
+                    </div>
                 </div>
-                <div class="contact-information-content">
-                    <span class="icons"><i class="bi bi-envelope-fill"></i></span>
-                    <p>upendar2002@gmail.com</p>
+                <div class="contact-form align-items-center">
+                    <form class="form align-items-center">
+                        <h2 class="mb-3">Contact US</h2>
+                        <div class="mb-3">
+                            <input type="text" placeholder="Enter Name" required name="fullname">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" placeholder="Enter Email" required name="email">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" placeholder="Enter Contact Number" required name="contact-number">
+                        </div>
+                        <div class="mb-3">
+                            <textarea name="message" placeholder="Enter Message" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <button class="btn2" type="submit">Submit</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="contact-information-content">
-                    <span class="icons"><i class="bi bi-geo-alt-fill"></i></span>
-                    <p>House No. 007, KJ, RajNagar, GZB</p>
+                <div>
+                    <button class="btn" type="submit"><a href="index.html">Back</a></button>
                 </div>
-            </div>
-            <div class="contact-form align-items-center">
-                <form class="form align-items-center">
-                    <h2 class="mb-3">Contact US</h2>
-                    <div class="mb-3">
-                        <input type="text" placeholder="Enter Name" required name="fullname">
-                    </div>
-                    <div class="mb-3">
-                        <input type="email" placeholder="Enter Email" required name="email">
-                    </div>
-                    <div class="mb-3">
-                        <input type="text" placeholder="Enter Contact Number" required name="contact-number">
-                    </div>
-                    <div class="mb-3">
-                        <textarea name="message" placeholder="Enter Message" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <button class="btn2" type="submit">Submit</button>
-                    </div>
-                </form>
-            </div>
-            <div>
-                <button class="btn" type="submit">Back</button>
-            </div>
-        </section>
-        <!--contact section end-->
+            </section>
+            <!--contact section end-->
+    </div>
 </body>
 </html>
