--- a/services.html
+++ b/services.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>services</title>
     <link rel="stylesheet" href="style.css">
-    <!--services -section start-->
-    <section id="services">
+</head>
+<body>
+    <div class="main">
+        <!--services -section start-->
+    <section id="services" class="mb-3">
         <h2 class="mb-3">Services</h2>
         <div class="service-items-wrapper first-service">
             <div class="service-item">
@@ -43,8 +46,9 @@
         </div>
     </section>
     <!--services -section end-->
-</head>
-<body>
-    
+    <div>
+        <button class="btn" type="submit"><a href="index.html">Back</a></button>
+    </div>
+    </div>
 </body>
 </html>
